# easywhisper

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-27-export-subtitle-preview.md  2026-06-27-whisper-subtitle-studio.md
docs/superpowers/specs/: 2026-06-27-export-subtitle-preview-design.md
src/: app.py  export.py  models.py  pipeline.py  setup.py  subtitles.py  transcription.py
tests/: test_export.py  test_pipeline.py  test_setup.py  test_subtitles.py
