[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easywhisper"
version = "0.1.0"
description = "Lightweight local desktop app to transcribe video into editable SRT subtitles using faster-whisper."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "PySide6>=6.6",
    "faster-whisper>=1.0",
    "srt>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
easywhisper = "src.app:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
